--- a/package.json
+++ b/package.json
@@ -20,5 +20,5 @@
   "bugs": {
     "url": "https://github.com/TameshwarNirmalkar/Region/issues"
   },
-  "homepage": "https://github.com/ashleygwilliams/my_package"
+  "homepage": "https://github.com/TameshwarNirmalkar/Region/blob/master/src/index.html"
 }
