--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "/src/index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js --quiet"
+    "start": "node app.js"
   },
   "author": "Tameshwar",
   "license": "MIT",
